# pykid

./: .gitignore  Pipfile  devrfsoc.yml  pyproject.toml  setup.cfg
kidpy3/: __init__.py  data_handler.py  kp3Exceptions.py  udp2.py
rfsoc/: config.py  redisControl.py  rfsocInterface.py  rfsocInterfaceDual.py  rfsoc_config.cfg
src/kidpy3/: __init__.py  data_handler.py  ifslice.py  rfsoc.py  udp2.py
tests/: mytest.yml  test_core.py  test_genconf.py  test_makewave.py  test_takewave.py
