[build-system]
requires = ["setuptools", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[project]
name = "kidpy3"
authors = [{name="Cody Roberson", email="carobers@asu.edu"}]
description = "RFSoC based MKID readout system library"
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = ["version"]
requires-python = ">= 3.8"
classifiers = [
    "License :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"

]
dependencies = [
    "h5py>=3.12.1",
    "matplotlib>=3.9.2",
    "omegaconf>=2.3.0",
    "numpy>=2.1.3",
    "redis>=5.2.0",
    "scipy>=1.14.1"
]