[metadata]
name = kidpy3
version = 0.0.3
author = Cody Roberson
author_email = carobers@asu.edu
description = RFSoC based MKID readout system library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ASU-Astronomical-Instrumentation/readout
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    h5py>=3.12.1
    matplotlib>=3.9.2
    numpy>=2.1.3
    omegaconf>=2.3.0
    redis>=5.2.0
    scipy>=1.14.1

python_requires = >=3.8

[options.extras_require]
dev =
    pytest
    flake8

[options.entry_points]
console_scripts =
    greet = mypackage.core:greet
